added presentation to the project

--- a/BNN-Autoencoder.ipynb
+++ b/BNN-Autoencoder.ipynb
@@ -1227,6 +1227,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   [11.8] Epoch: 01 | NELBO: 13601600.965035 | ELL: -247.171233 | KL: 7183.128203 | Val. ELL: -211.116445\n",
+      "   [23.5] Epoch: 02 | NELBO: 11222607.025641 | ELL: -204.045081 | KL: 127.516000 | Val. ELL: -199.334664\n",
+      "   [35.3] Epoch: 03 | NELBO: 10881831.750583 | ELL: -197.850955 | KL: 29.267135 | Val. ELL: -195.206757\n",
+      "   [48.0] Epoch: 04 | NELBO: 10704191.456876 | ELL: -194.621356 | KL: 16.873646 | Val. ELL: -193.232571\n",
+      "   [60.7] Epoch: 05 | NELBO: 10516937.662005 | ELL: -191.216769 | KL: 15.342306 | Val. ELL: -189.510512\n",
+      "   [73.5] Epoch: 06 | NELBO: 10323776.037296 | ELL: -187.704690 | KL: 18.082363 | Val. ELL: -185.743391\n",
+      "   [86.5] Epoch: 07 | NELBO: 10136727.727273 | ELL: -184.303825 | KL: 17.352935 | Val. ELL: -182.659125\n",
+      "   [99.2] Epoch: 08 | NELBO: 9989730.454545 | ELL: -181.631192 | KL: 14.893612 | Val. ELL: -179.357303\n",
+      "   [112.4] Epoch: 09 | NELBO: 9845169.386946 | ELL: -179.002864 | KL: 11.843587 | Val. ELL: -179.015847\n",
+      "   [125.5] Epoch: 10 | NELBO: 9733899.659674 | ELL: -176.979824 | KL: 9.347714 | Val. ELL: -174.964430\n",
+      "   [138.7] Epoch: 11 | NELBO: 9619541.081585 | ELL: -174.900586 | KL: 8.901089 | Val. ELL: -173.654964\n",
+      "   [151.9] Epoch: 12 | NELBO: 9545374.510490 | ELL: -173.552097 | KL: 9.174289 | Val. ELL: -171.965839\n",
+      "   [164.7] Epoch: 13 | NELBO: 9457680.198135 | ELL: -171.957677 | KL: 7.965402 | Val. ELL: -169.863465\n",
+      "   [177.4] Epoch: 14 | NELBO: 9396356.673660 | ELL: -170.842694 | KL: 8.509996 | Val. ELL: -169.311071\n",
+      "   [190.4] Epoch: 15 | NELBO: 9296108.836830 | ELL: -169.020040 | KL: 6.637145 | Val. ELL: -167.381136\n",
+      "   [205.2] Epoch: 16 | NELBO: 9194942.167832 | ELL: -167.180646 | KL: 6.579051 | Val. ELL: -166.011774\n",
+      "   [218.2] Epoch: 17 | NELBO: 9109406.787879 | ELL: -165.625434 | KL: 7.915894 | Val. ELL: -162.469112\n",
+      "   [231.0] Epoch: 18 | NELBO: 8943860.833333 | ELL: -162.615513 | KL: 7.630753 | Val. ELL: -160.834085\n",
+      "   [243.9] Epoch: 19 | NELBO: 8826895.793706 | ELL: -160.488891 | KL: 6.741864 | Val. ELL: -158.880499\n",
+      "   [256.8] Epoch: 20 | NELBO: 8725810.799534 | ELL: -158.650972 | KL: 7.325706 | Val. ELL: -156.721164\n",
+      "   [269.7] Epoch: 21 | NELBO: 8625669.685315 | ELL: -156.830217 | KL: 7.768193 | Val. ELL: -154.762122\n",
+      "   [283.1] Epoch: 22 | NELBO: 8532946.862471 | ELL: -155.144335 | KL: 8.445435 | Val. ELL: -153.317328\n",
+      "   [297.1] Epoch: 23 | NELBO: 8443388.607226 | ELL: -153.516000 | KL: 8.581220 | Val. ELL: -151.709705\n",
+      "   [311.3] Epoch: 24 | NELBO: 8331942.087413 | ELL: -151.489685 | KL: 9.401407 | Val. ELL: -149.971539\n",
+      "   [324.7] Epoch: 25 | NELBO: 8260761.944056 | ELL: -150.195522 | KL: 8.263953 | Val. ELL: -148.478655\n",
+      "   [338.2] Epoch: 26 | NELBO: 8185659.655012 | ELL: -148.830018 | KL: 8.673358 | Val. ELL: -147.232967\n",
+      "   [351.3] Epoch: 27 | NELBO: 8128308.417249 | ELL: -147.787263 | KL: 8.977474 | Val. ELL: -146.094183\n",
+      "   [364.8] Epoch: 28 | NELBO: 8070473.921911 | ELL: -146.735726 | KL: 8.999459 | Val. ELL: -145.406206\n",
+      "   [377.9] Epoch: 29 | NELBO: 8018621.069930 | ELL: -145.792954 | KL: 8.611030 | Val. ELL: -144.548481\n",
+      "   [391.1] Epoch: 30 | NELBO: 7981293.019814 | ELL: -145.114249 | KL: 9.338668 | Val. ELL: -143.721268\n",
+      "   [404.3] Epoch: 31 | NELBO: 7941509.834499 | ELL: -144.390906 | KL: 9.980219 | Val. ELL: -143.148914\n",
+      "   [417.8] Epoch: 32 | NELBO: 7904073.090909 | ELL: -143.710245 | KL: 9.648542 | Val. ELL: -142.540466\n",
+      "   [431.0] Epoch: 33 | NELBO: 7860844.503497 | ELL: -142.924268 | KL: 9.780655 | Val. ELL: -141.527732\n",
+      "   [444.3] Epoch: 34 | NELBO: 7832649.350816 | ELL: -142.411618 | KL: 10.366489 | Val. ELL: -141.174626\n",
+      "   [457.2] Epoch: 35 | NELBO: 7799245.601399 | ELL: -141.804274 | KL: 10.530949 | Val. ELL: -140.686969\n",
+      "   [470.1] Epoch: 36 | NELBO: 7767591.501166 | ELL: -141.228739 | KL: 10.831121 | Val. ELL: -139.896900\n",
+      "   [483.0] Epoch: 37 | NELBO: 7741651.818182 | ELL: -140.757097 | KL: 11.479780 | Val. ELL: -139.739718\n",
+      "   [495.8] Epoch: 38 | NELBO: 7715756.320513 | ELL: -140.286242 | KL: 13.013096 | Val. ELL: -139.202500\n",
+      "   [508.7] Epoch: 39 | NELBO: 7694272.523310 | ELL: -139.895616 | KL: 13.640006 | Val. ELL: -138.708656\n",
+      "   [521.6] Epoch: 40 | NELBO: 7664905.421911 | ELL: -139.361648 | KL: 14.798692 | Val. ELL: -138.217026\n",
+      "   [534.5] Epoch: 41 | NELBO: 7642688.313520 | ELL: -138.957716 | KL: 13.942239 | Val. ELL: -138.048493\n",
+      "   [547.3] Epoch: 42 | NELBO: 7618670.722611 | ELL: -138.521013 | KL: 14.987538 | Val. ELL: -137.756076\n",
+      "   [560.2] Epoch: 43 | NELBO: 7595319.010490 | ELL: -138.096426 | KL: 15.552235 | Val. ELL: -137.980660\n",
+      "   [574.4] Epoch: 44 | NELBO: 7582133.236597 | ELL: -137.856675 | KL: 16.096613 | Val. ELL: -137.016946\n",
+      "   [589.4] Epoch: 45 | NELBO: 7568202.395105 | ELL: -137.603346 | KL: 18.375730 | Val. ELL: -137.271799\n",
+      "   [602.7] Epoch: 46 | NELBO: 7552473.433566 | ELL: -137.317334 | KL: 20.072758 | Val. ELL: -136.510574\n",
+      "   [615.6] Epoch: 47 | NELBO: 7540816.700466 | ELL: -137.105398 | KL: 19.836573 | Val. ELL: -136.115096\n",
+      "   [628.6] Epoch: 48 | NELBO: 7520327.033800 | ELL: -136.732806 | KL: 22.727803 | Val. ELL: -136.854312\n",
+      "   [641.7] Epoch: 49 | NELBO: 7507238.351981 | ELL: -136.494774 | KL: 25.757481 | Val. ELL: -135.172992\n",
+      "   [654.7] Epoch: 50 | NELBO: 7496022.187646 | ELL: -136.290825 | KL: 26.813405 | Val. ELL: -135.583967\n",
+      "Total training time:  654.6703426837921\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_inputs = 784\n",
+    "n_neurons_encoder = [128, 64]\n",
+    "n_latent = 2\n",
+    "n_neurons_decoder = [64, 128]\n",
+    "vi = BayesianAutoencoder('BAE_128_64_2',\n",
+    "                         n_inputs,\n",
+    "                         n_neurons_encoder,\n",
+    "                         n_latent,\n",
+    "                         n_neurons_decoder,\n",
+    "                         constant_prior=False)\n",
+    "vi.learn(learning_rate=0.001, epochs=50, mc_samples=1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
