--- a/Bayesian-VAE.ipynb
+++ b/Bayesian-VAE.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "784 128\n",
+      "128 64\n",
+      "65 2\n",
+      "2 64\n",
+      "64 128\n",
+      "128 784\n",
+      "(?, ?, 784)\n",
+      "(?, 785, 128)\n",
+      "(?, ?, 128)\n",
+      "(?, 129, 64)\n",
+      "   [60.9] Epoch: 01 | NELBO: 12568050.545455 | ELL: -228.400534 | KL: 6021.204403 | Val. ELL: -198.710589\n",
+      "   [61.7] Epoch: 02 | NELBO: 10740864.731935 | ELL: -195.286091 | KL: 129.745579 | Val. ELL: -191.178578\n",
+      "   [61.7] Epoch: 03 | NELBO: 10344452.268065 | ELL: -188.079069 | KL: 103.482985 | Val. ELL: -184.300984\n",
+      "   [61.4] Epoch: 04 | NELBO: 9982264.340326 | ELL: -181.493383 | KL: 128.291354 | Val. ELL: -177.995801\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-cd009ce7a167>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m                  n_neurons_decoder = [64, 128])\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mVA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.001\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mVA\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbenchmark\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/python-projects/autoencoders-filippone/VariationalAutoencoders/models/bayesian_vae.py\u001b[0m in \u001b[0;36mlearn\u001b[0;34m(self, learning_rate, epochs, batch_size, mc_samples)\u001b[0m\n\u001b[1;32m    357\u001b[0m                 _, loss, ell, kl, summary = self.session.run(\n\u001b[1;32m    358\u001b[0m                     \u001b[0;34m[\u001b[0m\u001b[0mtrain_step\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mell\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmerged\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 359\u001b[0;31m                     feed_dict={self.X: batch_xs, self.L: mc_samples, self.N: mnist.train.num_examples})\n\u001b[0m\u001b[1;32m    360\u001b[0m                 \u001b[0mtrain_writer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_summary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    361\u001b[0m                 \u001b[0mtrain_cost\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mnum_batches\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/python-projects/environments/tf-simd/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    887\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 889\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    890\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    891\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/python-projects/environments/tf-simd/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1118\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfinal_fetches\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfinal_targets\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mfeed_dict_tensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1119\u001b[0m       results = self._do_run(handle, final_targets, final_fetches,\n\u001b[0;32m-> 1120\u001b[0;31m                              feed_dict_tensor, options, run_metadata)\n\u001b[0m\u001b[1;32m   1121\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1122\u001b[0m       \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/python-projects/environments/tf-simd/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_run\u001b[0;34m(self, handle, target_list, fetch_list, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m   1315\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1316\u001b[0m       return self._do_call(_run_fn, self._session, feeds, fetches, targets,\n\u001b[0;32m-> 1317\u001b[0;31m                            options, run_metadata)\n\u001b[0m\u001b[1;32m   1318\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1319\u001b[0m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_prun_fn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeeds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetches\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/python-projects/environments/tf-simd/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_do_call\u001b[0;34m(self, fn, *args)\u001b[0m\n\u001b[1;32m   1321\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_do_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1322\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1323\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1324\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mOpError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1325\u001b[0m       \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/python-projects/environments/tf-simd/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run_fn\u001b[0;34m(session, feed_dict, fetch_list, target_list, options, run_metadata)\u001b[0m\n\u001b[1;32m   1300\u001b[0m           return tf_session.TF_Run(session, options,\n\u001b[1;32m   1301\u001b[0m                                    \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget_list\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1302\u001b[0;31m                                    status, run_metadata)\n\u001b[0m\u001b[1;32m   1303\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1304\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_prun_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfetch_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "VA = BayesianVAE(name='bvae_128_64_2',\n",
+    "                 n_inputs=784,\n",
+    "                 n_neurons_encoder = [128, 64],\n",
+    "                 n_latent=2,\n",
+    "                 n_neurons_decoder = [64, 128])\n",
+    "\n",
+    "VA.learn(epochs=50, learning_rate=0.001)\n",
+    "VA.benchmark()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -67,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -109,8 +163,34 @@
       "   [66.2] Epoch: 31 | NELBO: 7785031.466200 | ELL: -141.542370 | KL: 201.109904 | Val. ELL: -141.915568\n",
       "   [64.9] Epoch: 32 | NELBO: 7758195.817016 | ELL: -141.054423 | KL: 202.555725 | Val. ELL: -140.920173\n",
       "   [65.7] Epoch: 33 | NELBO: 7748977.256410 | ELL: -140.886721 | KL: 207.595270 | Val. ELL: -141.166690\n",
-      "   [65.0] Epoch: 34 | NELBO: 7708936.020979 | ELL: -140.158653 | KL: 210.134407 | Val. ELL: -140.680909\n"
+      "   [65.0] Epoch: 34 | NELBO: 7708936.020979 | ELL: -140.158653 | KL: 210.134407 | Val. ELL: -140.680909\n",
+      "   [65.0] Epoch: 35 | NELBO: 7677794.750583 | ELL: -139.592427 | KL: 211.279825 | Val. ELL: -139.550496\n",
+      "   [65.5] Epoch: 36 | NELBO: 7687361.404429 | ELL: -139.766258 | KL: 217.172821 | Val. ELL: -140.625103\n",
+      "   [64.9] Epoch: 37 | NELBO: 7642799.699301 | ELL: -138.955985 | KL: 220.507081 | Val. ELL: -139.956658\n",
+      "   [67.6] Epoch: 38 | NELBO: 7637831.994172 | ELL: -138.865705 | KL: 218.226313 | Val. ELL: -139.761293\n",
+      "   [66.6] Epoch: 39 | NELBO: 7612631.141026 | ELL: -138.407364 | KL: 226.123404 | Val. ELL: -139.035238\n",
+      "   [67.1] Epoch: 40 | NELBO: 7616838.924242 | ELL: -138.483659 | KL: 237.676832 | Val. ELL: -139.763159\n",
+      "   [65.3] Epoch: 41 | NELBO: 7585743.902098 | ELL: -137.918267 | KL: 239.221760 | Val. ELL: -138.504555\n",
+      "   [66.6] Epoch: 42 | NELBO: 7567160.937063 | ELL: -137.580293 | KL: 244.804465 | Val. ELL: -138.953785\n",
+      "   [63.1] Epoch: 43 | NELBO: 7562814.680653 | ELL: -137.501190 | KL: 249.236977 | Val. ELL: -138.779959\n",
+      "   [63.3] Epoch: 44 | NELBO: 7542082.186480 | ELL: -137.124186 | KL: 251.940573 | Val. ELL: -138.424676\n",
+      "   [64.0] Epoch: 45 | NELBO: 7530059.854312 | ELL: -136.905367 | KL: 264.675188 | Val. ELL: -138.998790\n",
+      "   [65.0] Epoch: 46 | NELBO: 7522313.106061 | ELL: -136.764544 | KL: 263.183034 | Val. ELL: -138.795842\n",
+      "   [66.1] Epoch: 47 | NELBO: 7520616.994172 | ELL: -136.733457 | KL: 276.845644 | Val. ELL: -138.306658\n",
+      "   [66.6] Epoch: 48 | NELBO: 7500354.455711 | ELL: -136.364787 | KL: 291.153002 | Val. ELL: -137.883730\n",
+      "   [64.0] Epoch: 49 | NELBO: 7485691.027972 | ELL: -136.098201 | KL: 289.984860 | Val. ELL: -138.014073\n",
+      "   [63.0] Epoch: 50 | NELBO: 7468996.467366 | ELL: -135.794333 | KL: 308.143666 | Val. ELL: -137.552397\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-138.14534153082437"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -126,42 +206,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-142.01304215651302"
+       "-152.04759920560397"
       ]
      },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "VA.benchmark()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-151.45675698304785"
-      ]
-     },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "VA.benchmark(noisy=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved in file: DUMPS/bvae/bvae_128_64_2/model.ckpt\n"
+     ]
+    }
+   ],
+   "source": [
+    "VA.serialize('DUMPS/bvae/bvae_128_64_2/model.ckpt')"
    ]
   },
   {
