--- a/VAE.ipynb
+++ b/VAE.ipynb
@@ -1231,6 +1231,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VAE VAE_128_64_2\n",
+      " --> Encoder\n",
+      "    w:  (784, 128)  |  b: (128,)\n",
+      "    w:  (128, 64)  |  b: (64,)\n",
+      " --> Latent Space\n",
+      "    Mu.     w: (64, 2)  |  b: (2,)\n",
+      "    Sigma2. w: (64, 2)  |  b: (2,)\n",
+      " --> Decoder\n",
+      "    w:  (2, 64)  |  b: (64,)\n",
+      "    w:  (64, 128)  |  b: (128,)\n",
+      "    w:  (128, 784)  |  b: (784,)\n",
+      "*MODEL [ VAE_128_64_2 ] {l_r: 0.0010; n_iter: 50; batch: 128}\n",
+      " -> START Training!\n",
+      "   [2.4] Epoch: 00 | NELBO: 208.545845 | ELL: 204.856857 | KL: 3.688989\n",
+      "   [4.6] Epoch: 01 | NELBO: 178.801847 | ELL: 175.021204 | KL: 3.780642\n",
+      "   [6.8] Epoch: 02 | NELBO: 168.728670 | ELL: 164.373036 | KL: 4.355634\n",
+      "   [9.0] Epoch: 03 | NELBO: 163.129543 | ELL: 158.386167 | KL: 4.743377\n",
+      "   [11.2] Epoch: 04 | NELBO: 159.737042 | ELL: 154.725195 | KL: 5.011847\n",
+      "   [13.5] Epoch: 05 | NELBO: 157.097822 | ELL: 151.892695 | KL: 5.205127\n",
+      "   [15.7] Epoch: 06 | NELBO: 155.260815 | ELL: 149.914133 | KL: 5.346682\n",
+      "   [17.9] Epoch: 07 | NELBO: 153.601877 | ELL: 148.127537 | KL: 5.474339\n",
+      "   [20.2] Epoch: 08 | NELBO: 152.337457 | ELL: 146.770860 | KL: 5.566597\n",
+      "   [22.4] Epoch: 09 | NELBO: 151.381182 | ELL: 145.709168 | KL: 5.672014\n",
+      "   [24.6] Epoch: 10 | NELBO: 150.317079 | ELL: 144.584253 | KL: 5.732826\n",
+      "   [26.9] Epoch: 11 | NELBO: 149.568405 | ELL: 143.762580 | KL: 5.805825\n",
+      "   [29.2] Epoch: 12 | NELBO: 148.800529 | ELL: 142.939436 | KL: 5.861093\n",
+      "   [31.4] Epoch: 13 | NELBO: 148.266365 | ELL: 142.357038 | KL: 5.909327\n",
+      "   [33.6] Epoch: 14 | NELBO: 147.625212 | ELL: 141.656043 | KL: 5.969168\n",
+      "   [35.8] Epoch: 15 | NELBO: 147.240334 | ELL: 141.229153 | KL: 6.011181\n",
+      "   [38.2] Epoch: 16 | NELBO: 146.722609 | ELL: 140.673824 | KL: 6.048785\n",
+      "   [40.6] Epoch: 17 | NELBO: 146.491257 | ELL: 140.406010 | KL: 6.085248\n",
+      "   [43.0] Epoch: 18 | NELBO: 146.156976 | ELL: 140.035214 | KL: 6.121762\n",
+      "   [45.4] Epoch: 19 | NELBO: 145.642096 | ELL: 139.493708 | KL: 6.148388\n",
+      "   [47.8] Epoch: 20 | NELBO: 145.385099 | ELL: 139.216993 | KL: 6.168106\n",
+      "   [50.2] Epoch: 21 | NELBO: 145.110957 | ELL: 138.913636 | KL: 6.197321\n",
+      "   [52.6] Epoch: 22 | NELBO: 144.781034 | ELL: 138.557677 | KL: 6.223357\n",
+      "   [55.0] Epoch: 23 | NELBO: 144.551762 | ELL: 138.325260 | KL: 6.226502\n",
+      "   [57.4] Epoch: 24 | NELBO: 144.280408 | ELL: 138.028561 | KL: 6.251847\n",
+      "   [59.8] Epoch: 25 | NELBO: 143.963394 | ELL: 137.684369 | KL: 6.279025\n",
+      "   [62.2] Epoch: 26 | NELBO: 143.775215 | ELL: 137.474269 | KL: 6.300946\n",
+      "   [64.5] Epoch: 27 | NELBO: 143.735446 | ELL: 137.415461 | KL: 6.319985\n",
+      "   [66.9] Epoch: 28 | NELBO: 143.444112 | ELL: 137.116417 | KL: 6.327695\n",
+      "   [69.3] Epoch: 29 | NELBO: 143.334606 | ELL: 136.986087 | KL: 6.348519\n",
+      "   [71.7] Epoch: 30 | NELBO: 143.151150 | ELL: 136.775133 | KL: 6.376017\n",
+      "   [74.0] Epoch: 31 | NELBO: 142.834208 | ELL: 136.458448 | KL: 6.375760\n",
+      "   [76.4] Epoch: 32 | NELBO: 142.854154 | ELL: 136.472322 | KL: 6.381832\n",
+      "   [78.8] Epoch: 33 | NELBO: 142.735046 | ELL: 136.321027 | KL: 6.414018\n",
+      "   [81.2] Epoch: 34 | NELBO: 142.530160 | ELL: 136.119772 | KL: 6.410388\n",
+      "   [83.6] Epoch: 35 | NELBO: 142.323439 | ELL: 135.899110 | KL: 6.424330\n",
+      "   [85.9] Epoch: 36 | NELBO: 142.317117 | ELL: 135.879707 | KL: 6.437410\n",
+      "   [88.3] Epoch: 37 | NELBO: 142.138829 | ELL: 135.682676 | KL: 6.456153\n",
+      "   [90.7] Epoch: 38 | NELBO: 141.963611 | ELL: 135.531942 | KL: 6.431668\n",
+      "   [93.0] Epoch: 39 | NELBO: 141.960003 | ELL: 135.481170 | KL: 6.478833\n",
+      "   [95.4] Epoch: 40 | NELBO: 141.674690 | ELL: 135.202214 | KL: 6.472476\n",
+      "   [97.8] Epoch: 41 | NELBO: 141.750282 | ELL: 135.258977 | KL: 6.491305\n",
+      "   [100.5] Epoch: 42 | NELBO: 141.634722 | ELL: 135.135316 | KL: 6.499407\n",
+      "   [102.9] Epoch: 43 | NELBO: 141.427581 | ELL: 134.911261 | KL: 6.516319\n",
+      "   [105.2] Epoch: 44 | NELBO: 141.292335 | ELL: 134.771766 | KL: 6.520569\n",
+      "   [107.6] Epoch: 45 | NELBO: 141.409397 | ELL: 134.891147 | KL: 6.518251\n",
+      "   [110.0] Epoch: 46 | NELBO: 141.247287 | ELL: 134.708290 | KL: 6.538996\n",
+      "   [112.4] Epoch: 47 | NELBO: 141.158941 | ELL: 134.616261 | KL: 6.542680\n",
+      "   [114.7] Epoch: 48 | NELBO: 141.187442 | ELL: 134.641584 | KL: 6.545858\n",
+      "   [117.1] Epoch: 49 | NELBO: 140.727027 | ELL: 134.176253 | KL: 6.550774\n",
+      " -> Training FINISHED in 117.1 seconds.\n",
+      "Model saved in file: DUMPS/VAE_128_64_2\n",
+      "Time spent:  117.51293897628784\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "VA2 =  VariationalAutoencoder('VAE_128_64_2',\n",
+    "                 n_inputs=784,\n",
+    "                 n_neurons_encoder = [128, 64],\n",
+    "                 n_latent=2,\n",
+    "                 n_neurons_decoder = [64, 128],\n",
+    "                 batch_size = 128)\n",
+    "start_time = time.time()\n",
+    "VA2.learn(epochs=50)\n",
+    "print('Time spent: ', time.time() - start_time)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
